# ppmanipulation

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  colour.c  file.c  file.h  image.c  image.h  main.c  meme.ppm  ppmanipulation  ppmanipulation.cbp  transform.c
images/: nature.ppm
src/: border.c  colour.c  combine.c  connect.c  recut.c  transform.c
